# sporktda

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: publish_to_pypi.yml
.github/workflows/: publish_to_pypi.yml  publish_to_test_pypi.yml
doc_source/: buzz.rst  conf.py  installation.rst
docs/: .buildinfo  TDA.html  ZZ_TG.html  buzz.html  genindex.html  index.html  installation.html  license.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/sporktda/TDA/: BuZZ.html  TGZZ.html
docs/_modules/teaspoon/TDA/: BuZZ.html  TGZZ.html
docs/_sources/: TDA.rst.txt  ZZ_TG.rst.txt  index.rst.txt  installation.rst.txt  modules.rst.txt
docs/doctrees/: TDA.doctree  ZZ_TG.doctree  buzz.doctree  environment.pickle  index.doctree  installation.doctree  license.doctree  modules.doctree
notebooks/: zigzag.ipynb
sporktda/sporktda.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
