[build]

[project]
name = "sporktda"
version = "0.0.6"
authors = [
  { name="Elizabeth Munch", email="muncheli@msu.edu" },
]
description = "Spork - the teaspoon companion"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = ["dionysus", 
"pandas", 
"matplotlib", 
"ripser", 
"teaspoon>=1.4.0", 
"gudhi", 
"networkx", 
"numpy"]

[tool.setuptools.packages.find]
where = ["sporktda"]

[project.urls]
repository = "https://github.com/TeaspoonTDA/sporktda"
homepage = "https://github.com/TeaspoonTDA/sporktda"
documentation = "https://teaspoontda.github.io/sporktda/"

